--- a/public/css/watch.css
+++ b/public/css/watch.css
@@ -81,13 +81,17 @@ background-position: 0 -134px;
 }
 
 #wrapper h1{
-	;
+
 }
 
-
+.tires-main-img{
+    width: 23vw;
+    position: absolute;
+    top: 0;
+}
 #slider{
     width: 55vw;
-    height: 53vh;
+    height: 0vh;
     right: 18vw;
     overflow: hidden;
     margin-bottom: 20px;
@@ -107,14 +111,13 @@ background-position: 0 -134px;
     }
 
 .wrapper-between{
-    width: 90%;
+    width: 63%;
     height: auto;
-
 }
 
 .main-description {
-    width: 30vw;
-    height: 48vh;
+    width: 36vw;
+    min-height: 100vh;
     float: right;
     color: #fff;
 
@@ -131,7 +134,7 @@ background-position: 0 -134px;
     -ms-grid-rows: auto;
     grid-template-rows: auto;
     -ms-grid-columns: 236px auto;
-    grid-template-columns: 130px auto;
+    grid-template-columns: 260px auto;
     margin-top: 10px;
     grid-gap: 8px;
 }
@@ -142,14 +145,19 @@ background-position: 0 -134px;
 }
 
 .description-rating{
-    display: flex;
     align-items: center;
     height: 39px;
-    margin-bottom: 24px;
+    margin-bottom: 75px;
 }
 
 .rating-flex img{
-    height: 22px;
+    height: 45px;
+}
+
+.wrapper-center{
+    display: flex;
+    background: #fff;
+    align-items: center;
 }
 
 .kinopoisk_ratingImg{
@@ -185,9 +193,9 @@ background-position: 0 -134px;
 
 .original-title_image img{
     display: block;
-    height: 100%;
+    height: 400%;
     object-fit: contain;
-    width: 100%;
+    width: 200%;
 }
 
 .name{
@@ -280,7 +288,6 @@ margin-left: 0;
     font-size: 18px;
     line-height: 22px;
     color: #565c67;
-    display: flex;
     align-items: center;
     margin-right: 16px;
     margin-left: 0;
@@ -293,6 +300,7 @@ margin-left: 0;
 
 .description-Director{
   margin-left: 10px;
+    border-bottom: 2px solid sandybrown;
 }
 
 
@@ -563,7 +571,7 @@ opacity: 0;
     }
 
         iframe{
-    width: 99vw!important;
+    width: 100vw!important;
     height: 42vh!important;
     }
 
@@ -595,7 +603,7 @@ padding: 0!important;
     color: #999;
     width: 115%;
     left: 0;
-    height: 42vh;
+    height: 0vh;
     overflow: hidden;
     padding-right: 300px;
     border-top: 2px;
@@ -748,30 +756,11 @@ left: 20px;
     padding-top: 34px;
     }
 
-    .news-cont h2 {
-    margin-top: 140px!important;
-}
 
     .inner-clearfix {
     width: 95%!important;
 }
 
-    .adaptivnoctb {
-    width: 36vh;
-    height: 35vh;
-    bottom: 100px;
-    position: relative;
-    left: 90px;
-    float: right;
-    opacity: 0;
-    }
-
-    .Kinopoisk_logo{
-position: relative;
-    top: 12px;
-    left: 27px;
-    width: 20vh;
-    }
 
     .seoopisanie li h2 {
     position: relative;
@@ -785,11 +774,15 @@ position: relative;
 
 /*YOHOHO фреймы овтечающие за гирину*/
 #slider {
-    height: 85vh!important;
-    width: 95%;
+    height: 0vh!important;
+    width: 100%;
     left: 0;
     padding-right: 0px;
 }
+
+    .wrapper-between {
+        width: 81%!important;
+    }
 
 .first_episode #yohoho {
     float: left;
@@ -830,83 +823,13 @@ position: relative;
 
 
     .overlay_yjasi {
-    -webkit-font-smoothing: antialiased;
-    width: 100%;
-    min-width: 100%;
-    height: 60px;
-    position: absolute;
-    top: 168px;
-    margin: 0 auto;
-    background: linear-gradient(transparent, #191a1d);
-    padding-right: 0;
-    padding-left: 0;
-}
+        top: 18vh!important;
+    }
 
 .nova {
-    height: 227px;
+    height: 22vh!important;
     width: 100%;
 }
-
-    .search-wrap {
-    overflow: hidden;
-    z-index: 9999;
-    position: absolute;
-    height: 5.3vh;
-    width: 80vw!important;
-    left: 2vw!important;
-    top: 23%!important;
-}
-
-.search-box input{
-background: #333333;
-    border: 1px #666 solid;
-    border-radius: 7px;
-    box-sizing: border-box;
-    color: rgba(255,255,255,.5);
-    display: block;
-    font-size: 14px;
-    font-weight: 300;
-    height: 34px;
-    padding: 0 0 0 13px;
-    width: 280!important;
-}
-
-.search-box button {
-position: absolute;
-    right: 0;
-    top: 0;
-    border: 0;
-    padding: 0;
-    text-align: center;
-    width: 40px;
-    float: right;
-    height: 40px;
-    line-height: 40px;
-    color: #fff;
-    background-color: transparent;
-    font-size: 16px;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    cursor: pointer;
-}
-
-.search-box .fa-search {
-    padding-bottom: 2px;
-    border: 0;
-    padding: 0;
-    text-align: center;
-    width: 8vw;
-    height: 4vh;
-    color: #fff;
-    background-color: transparent;
-    font-size: 3.2vh;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    cursor: pointer;
-    z-index: 1;
-    }
-}
-
 
 .b-index-desc-text .img.right {
     float: right;
@@ -914,42 +837,6 @@ position: absolute;
 
 @media only screen and (max-width: 600px) and (min-height: 1024px) and (max-height: 1044px){
 
-
-    .Kinopoisk_logo {
-top: -10px;
-    border-radius: 10px;
-    left: 4.2vh;
-    width: 6vh;
-    height: 6vh;
-    position: relative;
-    float: right;
-}
-
-
-.labs-lovers li h1 {
-    color: #fff;
-    padding-left: 2.2vh;
-    padding-bottom: 2.1vh;
-    font-size: 3vw;
-    text-shadow: 0.6vh 0.4vh 1.1vh black;
-}
-
-.pi{
-    box-shadow: 0 5px 15px 3px black;
-    font-size: 1.9vh;
-    position: relative;
- top: 1vh;
-    right: 157px;
-background: #d12c52;
-width: 6vh;
-padding-left: .5vh;
-height: 2.5vh;
-border-radius: 6px;
-float: right;
-color: #D3D3D3;
-font-weight: 700;
-text-shadow: 2px 2px 2px black;
-}
 
 .seoopisanie li h2 {
 float: right;
@@ -966,11 +853,6 @@ position: absolute;
     bottom: 91vh;
     width: 47vh;
     right: 9vw;
-}
-
-.adaptivnoctb{
-margin-left: 20px;
-margin-top: 0;
 }
 
 .inner-clearfix h2{
@@ -1000,9 +882,7 @@ font-size: 31px;
 }
 /*partriet*/
 @media only screen and (max-height: 1366px) and (max-width: 1024px) and (min-height: 1290px) and (min-width: 1000px){
-.pi{
- right: 1.2vh;
-}
+
 .seoopisanie li h2{
         padding-left: 15%;
     bottom: 100px;
@@ -1012,89 +892,19 @@ font-size: 31px;
     min-height: 200px;
 }
 
-.img.right {
-    right: 2%;
-    position: relative;
-    width: 200px;
-}
-
-.news-cont p {
-    font-size: 16px;
-    line-height: 2.7vw;
-}
 
 .b-index-desc-text h2 {
     font-size: 24px;
 }
 
-.b-wrapper{
-bottom: 41vh!important;
-}
 
 }
 
 /*landscape*/
 @media only screen and (max-width: 1366px) and (max-height: 1024px) and (min-width: 1290px) and (min-height: 1000px){
    /*block after player*/
-.pohojie_seriali{
-width: 94vw;
-height: 45vh;
-margin-bottom: 20px;
-}
-.pohojie_seriali a{
-    width: 20vw;
-    height: 30vh;
-    left: 2%;
-    margin-left: 15px;
-    margin-right: 12px;
-}
 
 
-.pohojie_seriali a span{
-  color: #fff;
-  font-weight: 700;
-font-size: 14px;
-}
-
-.pohojie_seriali h3{
-margin-bottom: 10px;
-}
-
-.pohojie_seriali img{
-    width: 20vw;
-    height: 28vh;
-    margin-top: 10px;
-    margin-right: 20px;
-}
-
-.pohojie_seriali img:hover{
-  transform: scale(1.08);
-}
-/* End block after player*/
-
-.news-cont p{
-    color: #D3D3D3;
-    margin: .4vh 0 1.6vh 0;
-    font-size: 22px;
-    line-height: 2.6vw;
-}
-
-.news-cont h2 {
-    color: #fff;
-}
-
-.b-index-desc-text h2 {
-    padding-top: 8px!important;
-    color: #fff;
-    font-size: 39px;
-    font-weight: 700;
-    padding-top: 1.3vh;
-}
-
-.img.right {
-    float: right;
-    margin-right: 0!important;
-}
 
 .inner-clearfix {
     width: 91%;
@@ -1112,9 +922,9 @@ margin-bottom: 10px;
 width: 107%;
 }
 
-.labs-lovers li h1 {
-    font-size: 25px;
-}
+    .overlay_yjasi {
+        top: 40vh!important;
+    }
 
 .marginpar{
     padding-right: 13%;
@@ -1129,37 +939,6 @@ width: 107%;
     width: 100vw!important;
 }
 
-.originalname{
-    font-size: 22px;
-}
-
-.pi {
-    /* box-shadow: 0 5px 15px 3px black; */
-    font-size: 2.1vh;
-    top: 4vh;
-    right: -41px;
-    background: #d12c52;
-    width: 6vh;
-    padding-left: .5vh;
-    height: 3.1vh;
-    padding-top: 10px;
-    padding-right: 6px;
-    border-radius: 6px;
-    float: right;
-    color: #D3D3D3;
-    font-weight: 700;
-    text-shadow: 2px 2px 2px black;
-}
-
-.Kinopoisk_logo {
-    border-radius: 10px;
-    left: 15.2vh;
-    width: 8vh;
-    height: 8vh;
-    top: -54px;
-    position: relative;
-    float: right;
-}
 
 .seoopisanie li h2 {
     float: right;
@@ -1181,13 +960,6 @@ position: relative;
 }
 /*partriet*/
 @media only screen and (max-height: 1024px) and (max-width: 768px) and (min-height: 900px) and (min-width: 650px){
-.pi{
- right: 1.2vh;
-}
-.seoopisanie li h2{
-        padding-left: 17%;
-    bottom: 100px;
-}
 
 .inner-clearfix {
     min-height: 200px;
@@ -1209,61 +981,10 @@ position: relative;
     padding: 10px;
 }
 
-.b-wrapper{
-bottom: 41vh!important;
-}
-
-.Kinopoisk_logo{
-    width: 8.3vh;
-    border-radius: 10px 10px 10px 10px;
-    top: 26px;
-    position: relative;
-    left: 26px!important;
-    float: left;
-}
-
 }
 
 /* landscape*/
 @media only screen and (max-width: 1024px) and (max-height: 768px) and (min-width: 900px) and (min-height: 650px){
-
-   /*block after player*/
-.pohojie_seriali{
-width: 94vw;
-height: 45vh;
-margin-bottom: 20px;
-}
-.pohojie_seriali a{
-    width: 20vw;
-    height: 30vh;
-    left: 2%;
-    margin-left: 15px;
-    margin-right: 12px;
-}
-
-
-.pohojie_seriali a span{
-  color: #fff;
-  font-weight: 700;
-font-size: 14px;
-}
-
-.pohojie_seriali h3{
-margin-bottom: 10px;
-}
-
-.pohojie_seriali img{
-    width: 20vw;
-    height: 28vh;
-    margin-top: 10px;
-    margin-right: 20px;
-}
-
-.pohojie_seriali img:hover{
-  transform: scale(1.08);
-}
-/* End block after player*/
-
 
 .news-cont p{
 color: #D3D3D3;
@@ -1281,15 +1002,6 @@ color: #D3D3D3;
     margin-left: 60px!important;
 }
 
-
-
-.b-index-desc-text h2 {
-    padding-top: 8px!important;
-    color: #fff;
-    font-size: 32px;
-    font-weight: 700;
-    padding-top: 1.3vh;
-}
 
 .img.right {
     float: right;
@@ -1343,23 +1055,6 @@ width: 107%;
 .originalname{
     font-size: 22px;
 }
-
-.pi {
-    float: left;
-    right: 23px;
-    box-shadow: 0 5px 8px -2px black!important;
-}
-
-.Kinopoisk_logo {
-    border-radius: 10px;
-    left: -11.8vh;
-    width: 9vh;
-    height: 9vh;
-    top: 52px;
-    position: relative;
-    float: left;
-}
-
 .seoopisanie li h2 {
     float: left;
     position: relative;
@@ -1381,32 +1076,6 @@ position: relative;
 
 @media only screen and (max-width: 1024px) and (min-height: 1326px) and (max-height: 1366px){
 
-
-    .Kinopoisk_logo {
-    top: 10%;
-    border-radius: 10px;
-    width: 6vh;
-    height: 6vh;
-    position: relative;
-    float: left;
-}
-
-
-.labs-lovers li h1 {
-    color: #fff;
-    padding-left: 2.2vh;
-    padding-bottom: 2.1vh;
-    font-size: 3vw;
-    text-shadow: 0.6vh 0.4vh 1.1vh black;
-}
-
-.pi{
-font-size: 1.9vh;
-    top: 0;
-    height: 2.5vh;
-    border-radius: 6px;
-    float: left;
-}
 
 .originalname {
     font-size: 3vw;
